# FSE-trab-1

./: .gitignore  Cargo.toml  compile.sh  run.sh  send.sh  send_and_run.sh
andar1/: Cargo.toml
andar1/src/: main.rs  model.rs
andar1/src/gpio/: gpio_pins.rs
andar1/src/socket/: mod.rs  socket_async_interrupts.rs  socket_operations.rs
andar1/src/utils/: configure_graceful_shutdown.rs
andar2/: Cargo.toml
andar2/src/gpio/: gpio_async_interrupts.rs  mod.rs
app/: Cargo.toml
app/src/: constants.rs  ctrlc_handler.rs  dashboard_pooling.rs  main.rs  menus.rs  models.rs  operations.rs  socket_client.rs
first_floor/: Cargo.toml
first_floor/src/: main.rs
first_floor/src/socket/: socket_async_interrupts.rs  socket_client.rs  socket_operations.rs
ground_floor/: Cargo.toml
ground_floor/src/: main.rs
ground_floor/src/gpio/: gpio_pins.rs
ground_floor/src/socket/: socket_async_interrupts.rs  socket_client.rs  socket_operations.rs
ground_floor/src/utils/: mod.rs
second_floor/: Cargo.toml
second_floor/src/gpio/: gpio_pins.rs
server/: .gitignore  Cargo.toml  main.py  pyproject.toml
server/src/: central_database.py  constants.py  database.rs  main.rs  models.py  payloads.py  socket.py
server/src/models/: client.rs  mod.rs  parking_lot.rs
server/src/socket/: constants.rs  handlers.rs  mod.rs  namespace.rs  payloads.rs  server.rs
src/: access_management.rs  gpio_pins.rs  main.rs  model.rs
terreo/: Cargo.toml
terreo/src/: gpio_async_interrupts.rs  gpio_pins.rs  main.rs  model.rs  socket_client.rs  socket_operations.rs
(+6 files in other folders)
