[package]
name = "fse_trab_1_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.202"
serde_json = "1.0.117"
socketioxide = "0.13.1"
tokio = { version = "1.37.0", features = ["full"] }
